stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_expected_optional_or_response_type.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "63e1266e59cea9eac8a0ad51610a9fead56c783447a7f0ec59c1d114f4946a0d",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-opt-or-res-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type \'optional\' or \'response\', found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 485,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 485,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a749e3d67cd17ffb7e147e554e35ccbe0440d4505fa30d4302b4956d10c62121",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-opt-or-res-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting expression of type \'optional\' or \'response\', found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 485,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 485,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ee6fcf1bbbac5e29c744614f39dde6248b82228f6c96b6332b73e8ddfb7155ce",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-opt-or-res-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting expression of type \'optional\' or \'response\', found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 485,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 485,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "938581bfd3ca4fb47e373e553a763d33278557daca9473a969b9fc688eeb1192",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-opt-or-res-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type \'optional\' or \'response\', found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 485,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 485,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "501c8741609cde446f77b793bf81bd4c6ec72418ad14c86c9a4382bff4c333a0",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-opt-or-res-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting expression of type \'optional\' or \'response\', found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 485,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 485,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "614008cc3f4454b13e292475fb2d84102aa3bba7670ee09fcae13187842985d3",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-opt-or-res-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting expression of type \'optional\' or \'response\', found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 485,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 485,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f7e39ffce92b2e5eb9f44c47e257a732e7c2b1dce9d3eaa0d4aa126cbbf975fc",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-opt-or-res-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expecting expression of type \'optional\' or \'response\', found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 485,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 485,
    ),
  )),
]
