stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_expected_response_type.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "503019f3be7848862c59c2c95182cf38f978d976e72025075e64bab14cb2af93",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a031ad304f5b05810e9ba842798b65d36460425175b387eab4b788ab5159f73e",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6945db684d3347b0b227ae0b74fbefbbd4338074eb9b48fbab1793ca04527665",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "68217c0bdb7f9ef47c726d63b0ff35bdceb109a2464570231826c7e67e3b754d",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f4353e47b5e17d6c9eb94dd0fd4fd01205888ac71b6718d1c25a6d77d5f4f82e",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f078e4d5de24d424b31c9563db9ca6429805bc4bef814fb3bb7d48450475a3a5",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7248e470edca2f7a81701cecee3fa3794b8793014af3cc70341e052049c7599c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-response-type-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expecting expression of type \'response\', found \'(optional int)\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1065,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1065,
    ),
  )),
]
