stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_expected_tuple.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "bb62cdfab482aea78d323a917d9bc75e9efa14135ed4f4d8e527f50177ec1de6",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-tuple-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting tuple, found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 882,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 882,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6f8c79692c070ce5c5ec2164327e37a722be9e3352ecd9a9f856ff2c61ca1b7a",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-tuple-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting tuple, found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 882,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 882,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "37106f9a1b182df335f532735b1dbc67308bf76d8c05245e549810688a3269a4",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-tuple-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting tuple, found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 882,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 882,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ccae120c018aff26e0bead19f5ad0a20e21df08bb67a369013490a5820498430",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-tuple-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting tuple, found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 882,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 882,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c7fa609f590df18d4296c57427e2cf5af4d293b9089010fd53d27666980bf1d7",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-tuple-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting tuple, found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 882,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 882,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "da3ee584e8595ecd059f6f75a42ca70705b44fadd7a94ed75b0861c6ec6212d2",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-tuple-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting tuple, found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 882,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 882,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ca746c88e8c5a5da0b57a39a38ea13a9921606d9a171e67c12b43467027a5d33",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-tuple-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expecting tuple, found \'int\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 882,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 882,
    ),
  )),
]
